# dungeon-rogue

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: general.yml
assets/: Typical_2D_platformer_wip.ldtk  test.ldtk  test_map.ldtk  top_down_map.ldtk
resources/: settings.ron  textures.ron
src/: camera.rs  combat.rs  debug.rs  enemy.rs  ldtk.rs  main.rs  main_menu_ui.rs  map.rs  movement_tutorial_ui.rs  out_of_bounce.rs  physics.rs  player.rs  tutorial.rs
src/audio/: audio_settings.rs  mod.rs
src/common/: components.rs
src/hud/: mod.rs
src/interaction_groups/: mod.rs
src/player/: mod.rs  player_animations.rs  player_physics.rs
src/ron_parsers/: mod.rs  settings.rs  textures.rs
src/tests/: mod.rs  sprites_textures.rs
src/tutorial/: mod.rs  tutorial_physics.rs  tutorial_ui.rs
src/ui/: components.rs  dead_menu_ui.rs  main_menu_ui.rs  mod.rs  settings_menu_ui.rs
