[package]
name = "dungeon_rogue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.7", features = ["dynamic"]}
bevy_ecs_ldtk = "0.3"
bevy_rapier2d = { version = "0.13", features = ["simd-stable", "debug-render"] }
bevy-inspector-egui = "0.11"
