[package]
name = "dungeon_rogue"
version = "0.1.11"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.8", features = [
    "dynamic",
    "render",
    "animation",
    "bevy_winit",
    "bevy_gilrs",
    "png",
    "hdr",
    "filesystem_watcher",
    "x11"
]}
bevy_kira_audio = { version = "0.12", features = [
    "wav",
    "flac",
    "mp3",
    "ogg",
]}
bevy_ecs_ldtk = "0.4.0"
bevy_rapier2d = { version = "0.16", features = ["simd-stable", "debug-render"] }
bevy-inspector-egui = "0.12"
iyes_loopless = "0.7"
serde = "1.0.142"
ron = "0.8"

[features]
debug = []

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
